--- a/packages/plugin-gecko/package.json
+++ b/packages/plugin-gecko/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@ai16z/plugin-gecko",
+    "name": "@elizaos/plugin-gecko",
     "version": "0.1.6-alpha.4",
     "main": "dist/index.js",
     "type": "module",
