--- a/packages/plugin-gecko/package.json
+++ b/packages/plugin-gecko/package.json
@@ -1,11 +1,11 @@
 {
     "name": "@elizaos/plugin-gecko",
-    "version": "0.1.6-alpha.4",
+    "version": "0.1.7-alpha.1",
     "main": "dist/index.js",
     "type": "module",
     "types": "dist/index.d.ts",
     "dependencies": {
-        "@ai16z/eliza": "workspace:*",
+        "@elizaos/core": "workspace:*",
         "tsup": "8.3.5"
     },
     "scripts": {
